--- a/figure_scripts/figure_5/figure_5.rmd
+++ b/figure_scripts/figure_5/figure_5.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Figure 5"
-output: rmarkdown::github_document
+output: html_document
 ---
 
 ```{r message=FALSE}
@@ -95,9 +95,9 @@ def _collect_samples(W, resolution, n_cells, resamp_size, true_class, random_sta
 import matplotlib.pyplot as plt
 import seaborn as sns
 
-MNP_harmonized = pg.read_input("/home/nealpsmith/projects/medoff/data/myeloid_harmonized.h5ad")
+mnp_harmonized = pg.read_input("/home/nealpsmith/projects/medoff/data/anndata_for_publication/mnp_harmonized.h5ad")
 
-# rand_indx_dict = rand_index_plot(W = MNP_harmonized.uns["W_pca_harmony"],
+# rand_indx_dict = rand_index_plot(W = mnp_harmonized.uns["W_pca_harmony"],
 #                                       resolutions  = [0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9],
 #                                       n_samples = 2)
 #
@@ -110,7 +110,7 @@ fig, ax = plt.subplots(1)
 _ = sns.boxplot(x="index", y="value", data=plot_df, ax = ax)
 for box in ax.artists:
     box.set_facecolor("grey")
-ax.artists[6].set_facecolor("red") # The one we chose!
+# ax.artists[6].set_facecolor("red") # The one we chose!
 ax.spines['right'].set_visible(False)
 ax.spines['top'].set_visible(False)
 ax.tick_params(axis='both', which='major', labelsize=15)
@@ -130,9 +130,9 @@ import scanpy as sc
 import matplotlib.colors as clr
 colormap = clr.LinearSegmentedColormap.from_list('gene_cmap', ["#d3d3d3" ,'#482cc7'], N=200)
 
-# pg.leiden(MNP_harmonized, resolution = 1.5, rep = "pca_harmony", random_state = 2)
+# pg.leiden(mnp_harmonized, resolution = 1.5, rep = "pca_harmony", random_state = 2)
 
-sc.pl.umap(MNP_harmonized, color = ["leiden_labels"], legend_loc = "on data")
+sc.pl.umap(mnp_harmonized, color = ["leiden_labels"], legend_loc = "on data")
 ```
 
 After visually assessing many genes and through expert annotation, we could see that there was a small cluster of
@@ -173,27 +173,20 @@ dc1_genes = ["CLEC9A", "C1ORF54", "HLA-DPA1", "CADM1", "CAMK2D", "CPVL", "HLA-DP
              "CD38", "EHD4", "ACSS2", "LOC541471", "FUCA1", "SNX22", "APOL1", "DUSP10", "FAM160A2", "INF2", "DUSP2",
              "PALM2", "RAB11FIP4", "DSE", "FAM135A", "KCNK6", "PPM1H", "PAFAH1B3", "PDLIM1", "TGM2", "SCARF1", "CD40",
              "STX3", "WHAMMP3", "PRELID2", "PQLC2"]
-dc1_genes = [gene for gene in dc1_genes if gene in MNP_harmonized.var_names]
-MNP_harmonized.obs["dc1_score"] = score_cells(MNP_harmonized, dc1_genes)
+dc1_genes = [gene for gene in dc1_genes if gene in mnp_harmonized.var_names]
+mnp_harmonized.obs["dc1_score"] = score_cells(mnp_harmonized, dc1_genes)
 
-sc.pl.umap(MNP_harmonized, color="dc1_score", cmap = colormap)
+sc.pl.umap(mnp_harmonized, color="dc1_score", cmap = colormap)
 
 ```
 
 Additionally, after expert annotation, we did not think cluster 10 represented any unique set of cells and seemed to
 share all major markers with cluster 1.  Therefore, we refined our clustering by combining clusters 1 and 10 and
-manually segregating the cDC1 cells using their UMAP coordinates.
+manually segregating the cDC1 cells.  Below is the final clustering solution.  Cluster numbers were also adjusted to
+have them ordered by the phenotypic similarities (the order they fall in the marker heatmap below)
 
 ```{python dc1_subsetting}
-MNP_harmonized.obs["umap_1"] = MNP_harmonized.obsm["X_umap"][:, 0]
-MNP_harmonized.obs["umap_2"] = MNP_harmonized.obsm["X_umap"][:, 1]
-MNP_harmonized.obs["new_clusters"] = MNP_harmonized.obs["leiden_labels"]
-MNP_harmonized.obs["new_clusters"][MNP_harmonized.obs["new_clusters"] == "10"] = "1"
-
-MNP_harmonized.obs["new_clusters"][
-        ((MNP_harmonized.obs["umap_1"] > 5) & (MNP_harmonized.obs["umap_1"] < 6.5)) & (
-                    (MNP_harmonized.obs["umap_2"] < -5) & (MNP_harmonized.obs["umap_2"] > -6.6))] = "10"
-sc.pl.umap(MNP_harmonized, color = "new_clusters", legend_loc = "on data")
+sc.pl.umap(mnp_harmonized, color = "new_clusters", legend_loc = "on data")
 ```
 
 #Marker genes
@@ -202,14 +195,14 @@ First we can look at marker genes by AUROC.  The motivation here is to determine
 are good classifiers for cluster membership.  These stats were calculated using the Pegasus ```de_analysis``` function.
 
 ```{python DE_analysis}
-# pg.de_analysis(MNP_harmonized, cluster = "new_clusters", auc = True,
-#                n_jobs = len(set(MNP_harmonized.obs["new_clusters"])))
+# pg.de_analysis(mnp_harmonized, cluster = "new_clusters", auc = True,
+#                n_jobs = len(set(mnp_harmonized.obs["new_clusters"])))
 
 top_auc = {}
 top_genes = {}
-for clust in sorted(set(MNP_harmonized.obs["new_clusters"]), key = int) :
-    df_dict = {"auc": MNP_harmonized.varm["de_res"]["auroc:{clust}".format(clust=clust)]}
-    df = pd.DataFrame(df_dict, index=MNP_harmonized.var.index)
+for clust in sorted(set(mnp_harmonized.obs["new_clusters"]), key = int) :
+    df_dict = {"auc": mnp_harmonized.varm["de_res"]["auroc:{clust}".format(clust=clust)]}
+    df = pd.DataFrame(df_dict, index=mnp_harmonized.var.index)
     df = df.sort_values(by=["auc"], ascending=False)
     auc_df = df.iloc[0:50]
     genes = auc_df[auc_df["auc"] >= 0.75].index.values
@@ -236,9 +229,9 @@ tested. Genes with an FDR < 5% were considered marker genes.
 # import neals_python_functions as nealsucks
 # # Read in the raw count data
 # raw_data = pg.read_input("/home/nealpsmith/projects/medoff/data/all_data.h5sc")
-# raw_data = raw_data[MNP_harmonized.obs_names]
-# raw_data = raw_data[:, MNP_harmonized.var_names]
-# raw_data.obs = MNP_harmonized.obs[["leiden_labels", "Channel"]]
+# raw_data = raw_data[mnp_harmonized.obs_names]
+# raw_data = raw_data[:, mnp_harmonized.var_names]
+# raw_data.obs = mnp_harmonized.obs[["leiden_labels", "Channel"]]
 #
 # # Create the matrix
 # raw_sum_dict = {}
@@ -262,7 +255,7 @@ tested. Genes with an FDR < 5% were considered marker genes.
 #
 # clust_df = pd.DataFrame(index=count_mtx.index)
 # # Lets run pseudobulk on clusters
-# for clust in set(MNP_harmonized.obs["leiden_labels"]):
+# for clust in set(mnp_harmonized.obs["leiden_labels"]):
 #     print(clust)
 #     meta_temp = meta_df.copy()
 #     meta_temp["isclust"] = ["yes" if cluster == clust else "no" for cluster in meta_temp["cluster"]]
@@ -276,10 +269,10 @@ tested. Genes with an FDR < 5% were considered marker genes.
 #     clust_df = clust_df.join(res[["pvalue"]].rename(
 #         columns={"pvalue": "pseudobulk_p_val:{clust}".format(clust=clust)}))
 
-de_res = MNP_harmonized.varm["de_res"]
+de_res = mnp_harmonized.varm["de_res"]
 # de_res = pd.DataFrame(de_res, index=res.index)
 # de_res = de_res.join(clust_df)
-de_res = pd.DataFrame(de_res, index = MNP_harmonized.var_names)
+de_res = pd.DataFrame(de_res, index = mnp_harmonized.var_names)
 de_res = de_res.fillna(0)
 names = [name for name in de_res.columns if name.startswith("pseudobulk_p_val")]
 
@@ -289,16 +282,16 @@ for name in names :
     de_res["pseudobulk_q_val:{clust}".format(clust = clust)] = stats.fdrcorrection(de_res[name])[1]
 
 de_res = de_res.to_records(index=False)
-MNP_harmonized.varm["de_res"] = de_res
+mnp_harmonized.varm["de_res"] = de_res
 
 top_genes = {}
-for clust in sorted(set(MNP_harmonized.obs["leiden_labels"]), key = int) :
-    df_dict = {"auc": MNP_harmonized.varm["de_res"]["auroc:{clust}".format(clust=clust)],
-               "pseudo_q" : MNP_harmonized.varm["de_res"]["pseudobulk_q_val:{clust}".format(clust = clust)],
-               "pseudo_p" : MNP_harmonized.varm["de_res"]["pseudobulk_p_val:{clust}".format(clust = clust)],
-               "pseudo_log_fc" : MNP_harmonized.varm["de_res"]["pseudobulk_log_fold_change:{clust}".format(clust = clust)],
-               "percent" : MNP_harmonized.varm["de_res"]["percentage:{clust}".format(clust = clust)]}
-    df = pd.DataFrame(df_dict, index=MNP_harmonized.var.index)
+for clust in sorted(set(mnp_harmonized.obs["leiden_labels"]), key = int) :
+    df_dict = {"auc": mnp_harmonized.varm["de_res"]["auroc:{clust}".format(clust=clust)],
+               "pseudo_q" : mnp_harmonized.varm["de_res"]["pseudobulk_q_val:{clust}".format(clust = clust)],
+               "pseudo_p" : mnp_harmonized.varm["de_res"]["pseudobulk_p_val:{clust}".format(clust = clust)],
+               "pseudo_log_fc" : mnp_harmonized.varm["de_res"]["pseudobulk_log_fold_change:{clust}".format(clust = clust)],
+               "percent" : mnp_harmonized.varm["de_res"]["percentage:{clust}".format(clust = clust)]}
+    df = pd.DataFrame(df_dict, index=mnp_harmonized.var.index)
     # Lets limit to genes where at least 20% cells express it
     df = df[df["percent"] > 20]
     df = df.sort_values(by=["auc"], ascending=False)
@@ -354,8 +347,8 @@ for clust in top_genes.keys() :
 annot_genes = pd.DataFrame(dict([ (k,pd.Series(v)) for k,v in annot_genes.items() ]))
 annot_genes = annot_genes.rename(columns = {clust : "cluster_{clust}".format(clust=clust) for clust in annot_genes.columns})
 # Lets add the colors for each cluster from the UMAP
-clust_cols = dict(zip(sorted(set(MNP_harmonized.obs["new_clusters"]), key = int),
-                      MNP_harmonized.uns["new_clusters_colors"]))
+clust_cols = dict(zip(sorted(set(mnp_harmonized.obs["new_clusters"]), key = int),
+                      mnp_harmonized.uns["new_clusters_colors"]))
 clust_cols = pd.DataFrame(clust_cols,
                           index = ["col"]).rename(columns = dict(zip(clust_cols.keys(),
                                                                      ["cluster_{clust}".format(clust = clust) for clust
@@ -367,8 +360,8 @@ annot_genes = annot_genes.append(clust_cols)
 # Get the mean gene counts for sidebar
 gene_val_list = []
 gene_val_dict = {}
-for clust in sorted(set(MNP_harmonized.obs["new_clusters"]), key = int) :
-    gene_vals = MNP_harmonized.obs["n_genes"][MNP_harmonized.obs["new_clusters"] == clust]
+for clust in sorted(set(mnp_harmonized.obs["new_clusters"]), key = int) :
+    gene_vals = mnp_harmonized.obs["n_genes"][mnp_harmonized.obs["new_clusters"] == clust]
 
     mean = np.mean(gene_vals)
     gene_val_list.append(mean)
@@ -382,8 +375,8 @@ annot_genes = annot_genes.append(pd.DataFrame(gene_val_dict,
 
 
 # Get the mean expression of the top genes from each cluster
-de_df = {"mean_log_{clust}".format(clust = clust) : MNP_harmonized.varm["de_res"]["mean_logExpr:{clust}".format(clust = clust)] for clust in sorted(set(MNP_harmonized.obs["new_clusters"]), key = int)}
-de_df = pd.DataFrame(de_df, index = MNP_harmonized.var.index)
+de_df = {"mean_log_{clust}".format(clust = clust) : mnp_harmonized.varm["de_res"]["mean_logExpr:{clust}".format(clust = clust)] for clust in sorted(set(mnp_harmonized.obs["new_clusters"]), key = int)}
+de_df = pd.DataFrame(de_df, index = mnp_harmonized.var.index)
 
 heatmap_df = de_df.loc[heatmap_genes]
 
@@ -443,16 +436,16 @@ annot_genes = annot_genes.fillna('')
 
 
 # Get the mean expression of the top genes from each cluster
-de_df = {"mean_log_{clust}".format(clust = clust) : MNP_harmonized.varm["de_res"]["mean_logExpr:{clust}".format(clust = clust)] for clust in sorted(set(MNP_harmonized.obs["new_clusters"]), key = int)}
-de_df = pd.DataFrame(de_df, index = MNP_harmonized.var.index)
+de_df = {"mean_log_{clust}".format(clust = clust) : mnp_harmonized.varm["de_res"]["mean_logExpr:{clust}".format(clust = clust)] for clust in sorted(set(mnp_harmonized.obs["new_clusters"]), key = int)}
+de_df = pd.DataFrame(de_df, index = mnp_harmonized.var.index)
 
 heatmap_df = de_df.loc[heatmap_genes]
 
 # Get the mean gene counts for sidebar
 gene_val_list = []
 gene_val_dict = {}
-for clust in sorted(set(MNP_harmonized.obs["new_clusters"]), key = int) :
-    gene_vals = MNP_harmonized.obs["n_genes"][MNP_harmonized.obs["new_clusters"] == clust]
+for clust in sorted(set(mnp_harmonized.obs["new_clusters"]), key = int) :
+    gene_vals = mnp_harmonized.obs["n_genes"][mnp_harmonized.obs["new_clusters"] == clust]
 
     mean = np.mean(gene_vals)
     gene_val_list.append(mean)
@@ -601,7 +594,7 @@ MNP_gene_dict = {
 dot_cmap = clr.LinearSegmentedColormap.from_list('gene_cmap', ["#d3d3d3", "#a5cde3", "#6dafd6", '#08306b'], N=200)
 
 for key in MNP_gene_dict.keys() :
-    plot = sc.pl.dotplot(MNP_harmonized, MNP_gene_dict[key], groupby = "new_clusters",
+    plot = sc.pl.dotplot(mnp_harmonized, MNP_gene_dict[key], groupby = "new_clusters",
                   categories_order = ["11", "5", "6", "7", "13", "2", "14", "1", "8", "4", "9", "10", "3", "12"],
                          show = False, return_fig = True, title = "{key} markers".format(key = key),
                          cmap = dot_cmap, dot_max = 1)
@@ -613,6 +606,39 @@ for key in MNP_gene_dict.keys() :
 
 ```
 
+After inspecting all of the top marker genes for each cluster, we assigned the clusters specific annotations, which are
+shown below.
+
+```{python annotations}
+
+annotation_dict = {"1" : "MC1 (CXCL10)",
+                   "2" : "MC2 (SPP1)",
+                   "3" : "MC3 (AREG)",
+                   "4" : "Mac1 (FABP4)",
+                   "5" : "quiesMac",
+                   "6" : "quiesMC",
+                   "7" : "Cycling (PCLAF)",
+                   "8" : "MC4 (CCR2)",
+                   "9" : "Mac2 (A2M)",
+                   "10" : "pDC (TCF4)",
+                   "11" : "migDC (CCR7)",
+                   "12" : "DC1 (CLEC9A)",
+"13" : "DC2 (CD1C)",
+"14" : "AS DC (AXL)"}
+
+
+color_dict = dict(zip(annotation_dict.values(), mnp_harmonized.uns["new_clusters_colors"]))
+
+mnp_harmonized.obs["annotation"] = [annotation_dict[c] for c in mnp_harmonized.obs["new_clusters"]]
+figure = sc.pl.umap(mnp_harmonized, color = ["annotation"],
+                    palette = color_dict, return_fig = True, show = False, legend_loc = "on data")
+figure.set_size_inches(8, 8)
+figure
+
+```
+```
+
+
 
 #Differential abundance analysis
 
@@ -622,14 +648,15 @@ groups.  The takeaway from these plots are that the cells are not uniformly dist
 and there are some biases.
 
 ```{python embedding_density}
-MNP_harmonized.obs["pheno_tmpt"] = ["_".join([pheno, tmpt]) for pheno, tmpt in zip(MNP_harmonized.obs["phenotype"],
-                                                                                   MNP_harmonized.obs["sample"])]
-sc.tl.embedding_density(MNP_harmonized, basis = "umap", groupby = "pheno_tmpt", key_added = "pheno_tmpt_dens")
-dens_plot = sc.pl.embedding_density(MNP_harmonized, basis = "umap", key = "pheno_tmpt_dens", ncols = 3,
+mnp_harmonized.obs["pheno_tmpt"] = ["_".join([pheno, tmpt]) for pheno, tmpt in zip(mnp_harmonized.obs["phenotype"],
+                                                                                   mnp_harmonized.obs["sample"])]
+sc.tl.embedding_density(mnp_harmonized, basis = "umap", groupby = "pheno_tmpt", key_added = "pheno_tmpt_dens")
+dens_plot = sc.pl.embedding_density(mnp_harmonized, basis = "umap", key = "pheno_tmpt_dens", ncols = 3,
                                     return_fig = True, show = False, wspace = 0.3)
 dens_plot.set_size_inches(7, 5)
 dens_plot
 ```
+
 
 To look at the data in a more quantitative way, we used a mixed-effects association logistic regression model similar
 to that described by Fonseka et al.  We fit a logistic regression modelfor each cell cluster. Each cluster was modelled
@@ -641,7 +668,7 @@ groups at each condition (e.g. AA vs AC within baseline, AA vs AC within allerge
 confidence interval for each sample/condition combination were plotted.
 
 ```{python cell_info}
-cell_info = MNP_harmonized.obs
+cell_info = mnp_harmonized.obs
 ```
 
 ```{r diff_abund, warning = FALSE, message = FALSE}
